[package]
name = "swiftide-langfuse"
version.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
keywords.workspace = true
description.workspace = true
categories.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
# TODO: Go over these
serde.workspace = true
serde_with = { version = "^3.8", default-features = false, features = [
  "base64",
  "std",
  "macros",
] }
serde_json.workspace = true
serde_repr = "^0.1"
chrono.workspace = true
tokio.workspace = true
uuid.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
futures = "^0.3"
url = "^2.5"
reqwest = { version = "^0.12", default-features = false, features = [
  "json",
  "multipart",
] }


[lints]
workspace = true
