[package]
name = "swiftide-macros"
version.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
keywords.workspace = true
description.workspace = true
categories.workspace = true
repository.workspace = true
homepage.workspace = true

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
darling = "0.20"
proc-macro2 = "1.0"
convert_case = "0.6.0"

# Macro dependencies
anyhow.workspace = true
async-trait.workspace = true
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }

[dev-dependencies]
pretty_assertions.workspace = true
trybuild = "1.0"
prettyplease = "0.2.25"
insta.workspace = true
swiftide-core = { path = "../swiftide-core/", version = "*" }
swiftide = { path = "../swiftide/", version = "*" }

[lints]
workspace = true

[features]
# TODO: Clean up feature flag
default = ["swiftide-agents"]
swiftide-agents = ["dep:serde", "dep:serde_json"]
