[package]
name = "swiftide-macros"
version.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
keywords.workspace = true
description.workspace = true
categories.workspace = true
repository.workspace = true
homepage.workspace = true

[lib]
proc-macro = true

[dependencies]
swiftide-core = { path = "../swiftide-core/", version = "0.25.0" }

quote = { workspace = true }
syn = { workspace = true }
darling = { workspace = true }
proc-macro2 = { workspace = true }
convert_case = { workspace = true }

# Macro dependencies
anyhow.workspace = true
async-trait.workspace = true
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }

[dev-dependencies]
pretty_assertions.workspace = true
rustversion = "1.0.18"
trybuild = "1.0"
prettyplease = "0.2.25"
insta.workspace = true
swiftide = { path = "../swiftide/" }
tokio = { workspace = true, features = ["full"] }

[lints]
workspace = true

[features]
# TODO: Clean up feature flag
default = ["swiftide-agents"]
swiftide-agents = ["dep:serde", "dep:serde_json"]

[package.metadata.docs.rs]
all-features = true
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]
rustdoc-args = ["--cfg", "docsrs"]
