[package]
name = "swiftide-pyo3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "swiftide"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.22.0"
swiftide = { path = "../swiftide", features = ["pyo3"] }
