[package]
name = "swiftide-query"
version.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
keywords.workspace = true
description.workspace = true
categories.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
derive_builder = { workspace = true }
futures-util = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-stream = { workspace = true }
num_cpus = { workspace = true }
pin-project-lite = { workspace = true }
tracing = { workspace = true }
indoc = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

# Internal
swiftide-core = { path = "../swiftide-core", version = "0.13.0" }

[dev-dependencies]
swiftide-core = { path = "../swiftide-core", features = ["test-utils"] }

test-log = { workspace = true }
testcontainers = { workspace = true }
mockall = { workspace = true }
temp-dir = { workspace = true }
wiremock = { workspace = true }
test-case = { workspace = true }
insta = { workspace = true }


[lints]
workspace = true
