[package]
name = "swiftide-query"
version.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
keywords.workspace = true
description.workspace = true
categories.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
derive_builder = { workspace = true }
futures-util = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-stream = { workspace = true }
num_cpus = { workspace = true }
tracing = { workspace = true }
indoc = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tera = { workspace = true }

# Internal
swiftide-core = { path = "../swiftide-core", version = "0.17.4" }

[dev-dependencies]
swiftide-core = { path = "../swiftide-core", features = ["test-utils"] }

mockall = { workspace = true }
insta = { workspace = true }


[lints]
workspace = true
