[package]
name = "swiftide-query"
version.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
keywords.workspace = true
description.workspace = true
categories.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
derive_builder = { workspace = true }
futures-util = { workspace = true }
tokio = { workspace = true }
num_cpus = { workspace = true }
tracing = { workspace = true }
indoc = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tera = { workspace = true }

# Internal
swiftide-core = { path = "../swiftide-core", version = "0.25.0" }

[dev-dependencies]
swiftide-core = { path = "../swiftide-core", features = ["test-utils"] }

insta = { workspace = true }


[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]
rustdoc-args = ["--cfg", "docsrs"]
