[package]
name = "indexing"
version = "0.1.0"
edition = "2021"
rust-version.workspace = true

[dependencies]
ignore = "0.4.22"
code_ops = { path = "../code_ops" }
infrastructure = { path = "../infrastructure" }
anyhow = { workspace = true }
qdrant-client = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

itertools = { workspace = true }
tokio = { workspace = true }
async-stream = "0.3.5"
async-trait = { workspace = true }
futures-util = { workspace = true }
tokio-stream = "0.1.15"
indoc = { workspace = true }
redis = { workspace = true }
text-splitter = { version = "0.13.1", features = ["markdown"] }
chrono = { workspace = true }
