[package]
name = "infrastructure"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
tokio = { workspace = true }
tokio-util = { workspace = true }
once_cell = { workspace = true }
async-openai = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true, features = ["serde"] }
rand = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }

# tracing and otel
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
tracing-opentelemetry = { workspace = true }
opentelemetry-otlp = { workspace = true }
octocrab = { workspace = true }
jsonwebtoken = "9.2.0"
url.workspace = true
itertools = { workspace = true }
base64 = "0.22.0"
qdrant-client = { workspace = true }
opentelemetry-aws = "0.10.0"

[dev-dependencies]

[features]
integration_testing = []
default = []
