[package]
name = "infrastructure"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
async-openai = { workspace = true }
async-trait = { workspace = true }

# tracing and otel
tracing = { workspace = true }

base64 = "0.22.0"
qdrant-client = { workspace = true }

[dev-dependencies]

[features]
default = []
